# PolyRL

./: .gitignore  .gitmodules  Cargo.toml  INSTALL.md  MANIFEST.in  MINIMUM.md  README.md  REPRODUCE.md  ROADMAP.md  USAGE.md  pyproject.toml  sitecustomize.py
docker/: .dockerignore  Dockerfile  Dockerfile.demo  Dockerfile.rollout  README.md  docker-compose.yml
examples/data_preprocess/: openr1.py
examples/scripts/: README.md  launch_sglang.sh  launch_sglang_1.sh  launch_sglang_2.sh  launch_sglang_8b.sh  launch_sglang_mini.sh  launch_sglang_remote.sh  launch_sglang_step.sh  launch_sglang_test.sh  run_async_grpo8b_pipeline.sh  run_async_grpo_pipeline.sh  run_async_grpo_pipeline_mini.sh  run_async_grpo_pipeline_n2.sh  run_async_ppo_pipeline.sh  run_sync_grpo8b_default.sh  run_sync_grpo_default.sh
kube/: .gitignore  README.md
kube/cluster_setup/: README.md  gke_setup.py
kube/config/: example.toml
kube/deployment/: kube-rollout-manifest.yaml  kube-sglang-manifest.yaml  kube-test-manifest.yaml
kube/docker/: launch_rollout.sh  launch_sglang.sh  rollout.dockerfile  test.dockerfile  test_script.py
kube/rust/: Cargo.toml  README.md
kube/rust/src/: main.rs  scaler.rs  server.rs  settings.rs  watcher.rs
rlboost/: __init__.py  autopatch.py
rlboost/sglang/: __main__.py  autopatch.py  launch_server.py  patches.py
rlboost/verl_stream/trainer/: main_ppo.py  main_stream.py
rlboost/verl_stream/trainer/config/: ppo_default_trainer.yaml  ppo_stream_trainer.yaml
rlboost/verl_stream/trainer/ppo/: reward.py  stream_ray_trainer.py
rlboost/verl_stream/utils/reward_score/: __init__.py
rlboost/verl_stream/workers/: stream_fsdp_workers.py
rlboost/verl_stream/workers/actor/: __init__.py  stream_dp_actor.py
rlboost/verl_stream/workers/config/: __init__.py  rollout.py
rlboost/verl_stream/workers/critic/: __init__.py
rlboost/weight_transfer/: fsdp_interface.py  launcher.py  receiver_agent.py  receiver_config.py  sender_agent.py  sender_config.py  transfer_engine.py  utils.py
rollout-manager/: Cargo.toml  config.toml
rollout-manager/src/: balance.rs  handlers.rs  instance_manager.rs  state.rs
src/rlboost/: MANIFEST.in  README.md  pyproject.toml
src/rlboost/rlboost/: __init__.py
src/rlboost/rlboost/weight_transfer/: __init__.py  agent.py  config.py  fsdp_interface.py  launcher.py  transfer_engine.py  utils.py
src/rlboost/rollout-manager/: config.toml
src/rlboost/rollout-manager/src/: config.rs  main.rs  models.rs  utils.rs
src/rollout-manager/: Cargo.toml  config.toml
src/rollout-manager/src/: balance.rs  config.rs  handlers.rs  instance_manager.rs  main.rs  models.rs  state.rs  utils.rs
src/sglang/examples/verl_http/: README.md  (+13 more)
src/verl/: .gitignore
(+66 files in other folders)
