[package]
name = "gke-rl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
futures = "0.3"
tokio-stream = "0.1"
hyper = { version = "1", features = ["full"] }
kube = { version = "0.91", features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
