[package]
name = "rollout-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.10"
dashmap = "6.0"
axum-streams = { version = "0.21", features = ["json"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
